# profile

./: .gitignore  .webapp  Cargo.toml  Dockerfile  Trunk.toml  index.html  netlify.toml  tomlbackup.txt
src/: algos.rs  bio.rs  git_user.rs  lib.rs  main.rs  models.rs  nav.rs  resume.rs  router.rs  state.rs
